cambie imagen logo

--- a/como-llegar.html
+++ b/como-llegar.html
@@ -19,7 +19,7 @@
 <body>
 
     <header>
-        <div><img class="img-logo" src="./ARCHIVOS/IMAGENES/Recurso 3@0.5x.png" alt="logo-de-pag"></div>
+        <div><img class="img-logo" src="./ARCHIVOS/IMAGENES/logoibera.png" alt="logo-de-pag"></div>
         <nav class="grid-1">
             <ul class="grid-enlaces">
                 <li class="index"><a href="./index.html">Nosotros</a></li>
