--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <header>
 
-        <div><img class="img-logo" src="./ARCHIVOS/IMAGENES/Recurso 3@0.5x.png" alt="logo-de-pag"></div>
+        <div><img class="img-logo" src="./ARCHIVOS/IMAGENES/logoibera.png" alt="logo-de-pag"></div>
 
         <nav>
             <ul>
