--- a/galeria.html
+++ b/galeria.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <div><img class="img-logo" src="./ARCHIVOS/IMAGENES/logoibera.png" alt="logo-de-pag"></div>
+        <div><img class="img-logo" src="./archivos/imagenes/logoibera.png" alt="logo-de-pag"></div>
         <nav class="grid-1">
             <ul class="grid-enlaces">
                 <li class="index"><a href="./index.html">Nosotros</a></li>
@@ -34,44 +34,44 @@
         <h2>Los Rincones de la casa</h2>
         <article class="contenedor">
             <section class="card">
-                <img src="./ARCHIVOS/IMAGENES/frente3.jpg" alt="galeria">
+                <img src="./archivos/imagenes/frente3.jpg" alt="galeria">
                 <h5>Entrada principal</h5>
             </section>        
         
         <section class="card">
-            <img src="./ARCHIVOS/IMAGENES/galeria1.jpg" alt="galeria">
+            <img src="./archivos/imagenes/galeria1.jpg" alt="galeria">
             <h5>Galeria</h5>
         </section>
         <section class="card">
-            <img src="./ARCHIVOS/IMAGENES/pileta4.jpg" alt="pileta">
+            <img src="./archivos/imagenes/pileta4.jpg" alt="pileta">
             <h5>Pileta</h5>
         </section>
         <section class="card">
-            <img src="./ARCHIVOS/IMAGENES/parrilla.jpg" alt="parrilla">
+            <img src="./archivos/imagenes/parrilla.jpg" alt="parrilla">
             <h5>Parrilla</h5>
         </section>
         <section class="card">
-            <img src="./ARCHIVOS/IMAGENES/comedor1.jpg" alt="comedor">
+            <img src="./archivos/imagenes/comedor1.jpg" alt="comedor">
             <h5>Comedor</h5>
         </section>
         <section class="card">
-            <img src="./ARCHIVOS/IMAGENES/habitacion1.jpg" alt="habitacion">
+            <img src="./archivos/imagenes/habitacion1.jpg" alt="habitacion">
             <h5>Habitacion</h5>
         </section>
         <section class="card">
-            <img src="./ARCHIVOS/IMAGENES/habitacion1a.jpg" alt="habitacion">
+            <img src="./archivos/imagenes/habitacion1a.jpg" alt="habitacion">
             <h5>Habitacion</h5>
         </section>
         <section class="card">
-            <img src="./ARCHIVOS/IMAGENES/salaestar.jpg" alt="sala">
+            <img src="./archivos/imagenes/salaestar.jpg" alt="sala">
             <h5>Sala de estar amplia</h5>
         </section>
         <section class="card">
-            <img src="./ARCHIVOS/IMAGENES/baño.jpg" alt="baño">
+            <img src="./archivos/imagenes/baño.jpg" alt="baño">
             <h5>Baño</h5>
         </section>
         <section class="card">
-            <img src="./ARCHIVOS/IMAGENES/cocina.jpg" alt="cocina">
+            <img src="./archivos/imagenes/cocina.jpg" alt="cocina">
             <h5>Cocina</h5>
         </section>
     </article>
@@ -83,7 +83,7 @@
 
             <ul>
                 <li class="logo-booking"><a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
-                        <img src="./ARCHIVOS/IMAGENES/Recurso 4@10x.png" alt="">
+                        <img src="./archivos/imagenes/Recurso 4@10x.png" alt="">
                 </li>
                 <li class="logo-whats"><a href="https://web.whatsapp.com/">
                         <img src="./archivos/imagenes/Recurso 3@1x.png" alt="">
