cambios en el footer

--- a/contacto.html
+++ b/contacto.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./archivos/imagenes/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="./archivos/imagenes/favicon-16x16.png">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
-    <title>Aires del Ibera</title>
+    <title>Aires del Ibera | contacto </title>
 </head>
 
 <body>
@@ -65,16 +65,21 @@
         <section class="pie-pag">    
 
             <ul>
-                <li class="logo-booking"><a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
-                    <img src="./archivos/imagenes/Recurso 4@10x.png" alt="">
-            </li>
-            <li class="logo-whats"><a href="https://web.whatsapp.com/">
-                <img src="./archivos/imagenes/Recurso 3@1x.png" alt="">
+                <li class="logo-fb"><a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
+                        <img src="./archivos/imagenes/face.png" alt="">
+                </li>
+                </a>
+                <li class="logo-whats"><a href="https://web.whatsapp.com/">
+                        <img src="./archivos/imagenes/whatspp.png" alt="">
 
                     </a>
                 </li>
-            </ul>
+                <li class="logo-ig"><a href="https://web.whatsapp.com/">
+                    <img src="./archivos/imagenes/instagram.png" alt="">
 
+                </a>
+            </li>
+            </ul>
         
         </section>
 
