--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-    <link rel="icon" type="image/png" href="./archivos/imagenes/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="./archivos/imagenes/favicon-16x16.png">
 
 
 
@@ -20,12 +20,19 @@
     <link rel="stylesheet" href="style.css">
 
     <title>Aires del Ibera</title>
+
+    <meta name="description" content="Cabaña Aires del Ibera está situado en Colonia Carlos Pellegrini y 
+    ofrece jardín, conexión de wifi gratis, actividades para niños y mostrador de información turística.">
+    <meta name="keyword" content="alojamiento esteros ibera">
+
 </head>
 
 <body>
     <header>
 
         <div><img class="img-logo" src="./archivos/imagenes/logoibera.png" alt="logo-de-pag"></div>
+
+
 
         <nav>
             <ul>
@@ -38,7 +45,7 @@
         </nav>
     </header>
     <main>
-        
+
         <section class="grid">
 
             <h2 class="grid-title">AIRES DEL IBERA</h2>
@@ -54,6 +61,10 @@
             <img class="grid-img1" src="./archivos/imagenes/atardecer.jpg" alt="">
             <img class="grid-img2" src="./archivos/imagenes/frente4.jpg" alt="">
 
+            <li class="logo-booking"><a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
+                <img src="./ARCHIVOS/IMAGENES/Recurso 4@10x.png" alt="">
+        </li>
+        </a>
 
 
 
@@ -64,18 +75,24 @@
     </main>
 
     <footer>
-        
+
         <section class="pie-pag">
 
             <ul>
-                <li class="logo-booking"><a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
-                        <img src="./ARCHIVOS/IMAGENES/Recurso 4@10x.png" alt="">
+                <li class="logo-fb"><a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
+                        <img src="./archivos/imagenes/face.png" alt="">
                 </li>
+                </a>
                 <li class="logo-whats"><a href="https://web.whatsapp.com/">
-                        <img src="./archivos/imagenes/Recurso 3@1x.png" alt="">
+                        <img src="./archivos/imagenes/whatspp.png" alt="">
 
                     </a>
                 </li>
+                <li class="logo-ig"><a href="https://web.whatsapp.com/">
+                    <img src="./archivos/imagenes/instagram.png" alt="">
+
+                </a>
+            </li>
             </ul>
 
 
