--- a/PORTAL.html
+++ b/PORTAL.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="./archivos/imagenes/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="./archivos/imagenes/favicon-16x16.png">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Aires del Ibera</title>
+    <title>Aires del Ibera | portal </title>
 </head>
 
 <body>
@@ -32,18 +32,29 @@
     </header>
     <main>
         <section class="grid2">
-                <h2 class="grid-title2">PORTAL LAGUNA IBERA</h2>
-                <p class="grid-texto2">La Reserva Natural del Iberá es un lugar de ensueño enclavado en el corazón de la provincia de Corrientes,
-                    admirado por aventureros apasionados por albergar numerosas especies reconocidas como Monumentos Naturales de la Provincia de Corrientes.
-                </p>
-                <br>
-                <iframe class="grid-video" width="1280" height="720" src="https://www.youtube.com/embed/bUw93NZdpck"
-                    title="Colonia Carlos Pellegrini   ESTEROS DEL IBERÁ" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-          
+            <h2 class="grid-title2">PORTAL LAGUNA IBERA</h2>
+            <p class="grid-texto2">La Reserva Natural del Iberá es un lugar de ensueño enclavado en el corazón de la
+                provincia de Corrientes,
+                admirado por aventureros apasionados por albergar numerosas especies reconocidas como Monumentos
+                Naturales de la Provincia de Corrientes.
+            </p>
+            <br>
+            <iframe class="grid-video" width="1280" height="720" src="https://www.youtube.com/embed/bUw93NZdpck"
+                title="Colonia Carlos Pellegrini   ESTEROS DEL IBERÁ" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>  
 
         </section>
+        <h2>QUE SON LOS ESTEROS DEL IBERA</h2>
+        <p>
+            “Iberá” quiere decir “agua que brilla” en guaraní, que es justamente lo que abunda en este ecosistema
+            formado por lagunas, esteros, embalsados, bañados y ríos que se alimentan de agua de lluvia. <br>
+
+            La Reserva Natural se creó en 1983 y preserva 1.300.000 hectáreas de uno de los humedales más grandes de
+            Latinoamérica. Es un lugar ideal para ver de cerca los animales que lo habitan: carpinchos, ciervos de
+            los pantanos, monos, aves se pueden apreciar a muy corta distancia. <br>
+
+            Desde el año 2018, contamos con el Parque Nacional Iberá que cuenta con 183500 hectáreas.</p>
 
     </main>
 
@@ -52,11 +63,17 @@
         <section class="pie-pag">
 
             <ul>
-                <li class="logo-booking"><a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
-                    <img src="./archivos/imagenes/Recurso 4@10x.png" alt="">
-            </li>
-            <li class="logo-whats"><a href="https://web.whatsapp.com/">
-                <img src="./archivos/imagenes/Recurso 3@1x.png" alt="">
+                <li class="logo-fb"><a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
+                        <img src="./archivos/imagenes/face.png" alt="">
+                </li>
+                </a>
+                <li class="logo-whats"><a href="https://web.whatsapp.com/">
+                        <img src="./archivos/imagenes/whatspp.png" alt="">
+
+                    </a>
+                </li>
+                <li class="logo-ig"><a href="https://web.whatsapp.com/">
+                        <img src="./archivos/imagenes/instagram.png" alt="">
 
                     </a>
                 </li>
