me falta un montonazo

--- a/PORTAL.html
+++ b/PORTAL.html
@@ -39,14 +39,20 @@
                 Naturales de la Provincia de Corrientes.
             </p>
             <br>
-            <iframe class="grid-video" width="1280" height="720" src="https://www.youtube.com/embed/bUw93NZdpck"
+            <iframe class="grid-video" width="767" height="480" src="https://www.youtube.com/embed/bUw93NZdpck"
                 title="Colonia Carlos Pellegrini   ESTEROS DEL IBERÁ" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>  
 
+                <img class="grid-img3" width="767" src="./archivos/imagenes/CAMPING.png" alt="imagen del camping">
+               
+
         </section>
-        <h2>QUE SON LOS ESTEROS DEL IBERA</h2>
-        <p>
+        <h2 class="grid-title3">QUE SON LOS ESTEROS DEL IBERA</h2>
+
+        <img class="grid-img4" src="./archivos/imagenes/carpinchos.jpg" alt="imagen de carpinchos">
+        <img class="grid-img5" src="./archivos/imagenes/ciervo.jpg" alt="imagen de ciervo">
+        <p class="grid-t">
             “Iberá” quiere decir “agua que brilla” en guaraní, que es justamente lo que abunda en este ecosistema
             formado por lagunas, esteros, embalsados, bañados y ríos que se alimentan de agua de lluvia. <br>
 
