--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 
 
-        <nav>
-            <ul>
+        <nav class="grid-1">
+            <ul class="grid-enlaces">
                 <li class="index"><a href="./index.html">Nosotros</a></li>
                 <li class="index"><a href="./galeria.html">Galeria</a></li>
                 <li class="index"><a href="./como-llegar.html">Como Llegar</a></li>
@@ -61,10 +61,7 @@
             <img class="grid-img1" src="./archivos/imagenes/atardecer.jpg" alt="">
             <img class="grid-img2" src="./archivos/imagenes/frente4.jpg" alt="">
 
-            <li class="logo-booking"><a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
-                <img src="./ARCHIVOS/IMAGENES/Recurso 4@10x.png" alt="">
-        </li>
-        </a>
+        
 
 
 
