--- a/contacto.html
+++ b/contacto.html
@@ -32,6 +32,7 @@
     <main>
 
         <section>
+            <img src="./archivos/imagenes/fondo-main.png" alt="">
             <h2>Dejanos tu consulta</h2>
             <form action="" method="POST" enctype="">
 
@@ -58,7 +59,10 @@
 
         </section>
 
-
+        <li class="logo-booking"><a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
+            <img src="./archivos/imagenes/Recurso 4@10x.png" alt="">
+    </li>
+    </a>
 
     </main>
     <footer>
@@ -82,6 +86,7 @@
             </ul>
         
         </section>
+
 
 
     </footer>
