me falta un monton

--- a/PORTAL.html
+++ b/PORTAL.html
@@ -48,20 +48,21 @@
                
 
         </section>
+        <section>
         <h2 class="grid-title3">QUE SON LOS ESTEROS DEL IBERA</h2>
 
         <img class="grid-img4" src="./archivos/imagenes/carpinchos.jpg" alt="imagen de carpinchos">
         <img class="grid-img5" src="./archivos/imagenes/ciervo.jpg" alt="imagen de ciervo">
-        <p class="grid-t">
+        <p class="grid-texto3">
             “Iberá” quiere decir “agua que brilla” en guaraní, que es justamente lo que abunda en este ecosistema
-            formado por lagunas, esteros, embalsados, bañados y ríos que se alimentan de agua de lluvia. <br>
+            formado por lagunas, esteros, embalsados, bañados y ríos que se alimentan de agua de lluvia.
 
             La Reserva Natural se creó en 1983 y preserva 1.300.000 hectáreas de uno de los humedales más grandes de
             Latinoamérica. Es un lugar ideal para ver de cerca los animales que lo habitan: carpinchos, ciervos de
-            los pantanos, monos, aves se pueden apreciar a muy corta distancia. <br>
+            los pantanos, monos, aves se pueden apreciar a muy corta distancia.
 
             Desde el año 2018, contamos con el Parque Nacional Iberá que cuenta con 183500 hectáreas.</p>
-
+        </section>
     </main>
 
     <footer>
