--- a/contacto.html
+++ b/contacto.html
@@ -32,7 +32,7 @@
     <main>
 
         <section>
-            <img src="./archivos/imagenes/fondo-main.png" alt="">
+    
             <h2>Dejanos tu consulta</h2>
             <form action="" method="POST" enctype="">
 
@@ -59,9 +59,11 @@
 
         </section>
 
-        <li class="logo-booking"><a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
+        <section class="logo-booking">
+            <h5>Click en el botón y hace tu reserva! </h5>
+            <a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
             <img src="./archivos/imagenes/Recurso 4@10x.png" alt="">
-    </li>
+        </section>
     </a>
 
     </main>
