--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             </P>
             <img class="grid-img1" src="./archivos/imagenes/atardecer.jpg" alt="">
             <img class="grid-img2" src="./archivos/imagenes/frente4.jpg" alt="">
+            <img class="grid-img1a" src="./archivos/imagenes" alt="">
+            <img class="grid-img2a" src="./archivos/imagenes/pileta4.jpg" alt="">
+
 
         
 
