solo cambie la imagen de un boton

--- a/contacto.html
+++ b/contacto.html
@@ -62,7 +62,7 @@
         <section class="logo-booking">
             <h5>Click en el botón y hace tu reserva! </h5>
             <a href="https://www.booking.com/hotel/ar/aires-del-ibera.es-ar.html">
-            <img src="./archivos/imagenes/Recurso 4@10x.png" alt="">
+            <img src="./archivos/imagenes/logo-booking.png" alt="">
         </section>
     </a>
 
