--- a/galeria.html
+++ b/galeria.html
@@ -17,16 +17,34 @@
 
 <body>
     <header>
-        <div><img class="img-logo" src="./archivos/imagenes/logoibera.png" alt="logo-de-pag"></div>
+        <section>
+            <div><a href="./index.html"> <img class="img-logo"  src="./archivos/imagenes/logoibera.png" alt="logo-de-pag"></a></div>
+            
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Buscar</button>
+              </form>
+            </section>
         <nav class="grid-1">
-            <ul class="grid-enlaces">
-                <li class="index"><a href="./index.html">Nosotros</a></li>
-                <li class="index"><a href="./galeria.html">Galeria</a></li>
-                <li class="index"><a href="./como-llegar.html">Como Llegar</a></li>
-                <li class="index"><a href="./PORTAL.html">Portal</a></li>
-                <li class="index"><a href="./contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./index.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./galeria.html">Galeria</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./como-llegar.html">Como llegar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./PORTAL.html">Portal</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                  </li>
+              </ul>
+    
+            </nav>
     </header>
 
     <main>
