--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./archivos/imagenes/espejo.jpg" class="d-block w-100" alt="espejo-agua">
+                <img src="./archivos/imagenes/ave.jpg" class="d-block w-100" alt="espejo-agua">
               </div>
               <div class="carousel-item">
-                <img src="./archivos/imagenes/carpinchito.jpg" class="d-block w-100" alt="imagen-carpincho">
+                <img src="./archivos/imagenes/espejo.jpg" class="d-block w-100" alt="imagen-carpincho">
               </div>
               <div class="carousel-item">
                 <img src="./archivos/imagenes/puente1.jpg" class="d-block w-100" alt="esteros ibera">
