--- a/como-llegar.html
+++ b/como-llegar.html
@@ -12,8 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/main.css">
+    
 
-    <link rel="stylesheet" href="style.css">
 
     <title>AIRES del IBERA | ubicacion</title>
 </head>
