--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+   
+    <link rel="stylesheet" href="./css/main.css">
 
     <title>Aires del Ibera</title>
 
