--- a/PORTAL.html
+++ b/PORTAL.html
@@ -7,6 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./archivos/imagenes/favicon-16x16.png">
 
+    <meta name="description" content="El lugar mas lindo para descansar unos dias">
+
+<meta name="keywords" content="cabañas ibera laguna esteros corrientes">
+<meta name="author" content="agimdaf">
+<meta name="copyright" content="propietario del copyright">
+<meta property=" og:title" content="Necesitas descansar unos dias?">
+<meta property="og:description" content="En este lugar vas a encontrar la paz y la tranquilidad que estas buscando. Veni a visitarnos y grabate en la retina los atardeceres mas lindos del litoral">
+<meta property="og:image" content="">
+<meta property="og:type" content="">
+<meta property="og:locale:alternate" content="us_US">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
