--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 
 
   <link rel="icon" type="image/x-icon" href="./archivos/imagenes/favicon-16x16.png">
+<meta name="description" content="El lugar mas lindo para descansar unos dias">
+
+<meta name="keywords" content="cabañas ibera laguna esteros corrientes">
+<meta name="author" content="agimdaf">
+<meta name="copyright" content="propietario del copyright">
+<meta property=" og:title" content="Necesitas descansar unos dias?">
+<meta property="og:description" content="En este lugar vas a encontrar la paz y la tranquilidad que estas buscando. Veni a visitarnos y grabate en la retina los atardeceres mas lindos del litoral">
+<meta property="og:image" content="">
+<meta property="og:type" content="">
+<meta property="og:locale:alternate" content="us_US">
 
 
 
